--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
   </nav>
 
   <header id="home">
-    <h1>Spincy</h1>
+   <h1 style="font-size: 3.2em; color: #ffd700; text-transform: uppercase;">SPINCY</h1>
+
     <p>Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
   </header>
 
