--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
       <a href="/#contact">Contact</a>
     </div>
   </nav>
+<header id="home" style="background: #e12c2c; padding: 40px 20px; text-align: center; position: relative; border-top: 10px solid #ffd700; border-bottom: 10px solid #ffd700;">
+  <h1 style="font-size: 3.2em; color: #ffd700; text-transform: uppercase; margin: 0;">SPINCY</h1>
+  <p style="font-size: 1.3em; color: white; margin-top: 15px;">Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
+</header>
 
-  <header id="home">
-   <h1 style="font-size: 3.2em; color: #ffd700; text-transform: uppercase;">SPINCY</h1>
-
-    <p>Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
-  </header>
 
   <section id="about" class="hero" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 30px; max-width: 1200px; margin: 0 auto; padding: 40px 20px;">
     <img src="hoagie.jpg" alt="Doner wrap" style="flex: 1; max-width: 500px; border-radius: 12px;">
