--- a/index.html
+++ b/index.html
@@ -92,10 +92,14 @@
       <a href="/#contact">Contact</a>
     </div>
   </nav>
-<header id="home" style="background: #e12c2c; padding: 40px 20px; text-align: center; position: relative; border-top: 10px solid #ffd700; border-bottom: 10px solid #ffd700;">
-  <h1 style="font-size: 3.2em; color: #ffd700; text-transform: uppercase; margin: 0;">SPINCY</h1>
-  <p style="font-size: 1.3em; color: white; margin-top: 15px;">Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
+<header id="home" style="position: relative; height: 100vh; background: url('https://i.imgur.com/5jqfHXX.jpg') center/cover no-repeat;">
+  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.4);"></div>
+  <div style="position: relative; z-index: 2; color: white; text-align: center; top: 50%; transform: translateY(-50%); padding: 0 20px;">
+    <h1 style="font-size: 3.5em; color: #ffd700; text-transform: uppercase; margin-bottom: 15px;">Spincy</h1>
+    <p style="font-size: 1.5em;">Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
+  </div>
 </header>
+
 
 
   <section id="about" class="hero" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 30px; max-width: 1200px; margin: 0 auto; padding: 40px 20px;">
