--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <a href="/#contact">Contact</a>
     </div>
   </nav>
-<header id="home" style="position: relative; height: 100vh; background: url('zurna.webp') center/cover no-repeat;">
+<header id="home" style="position: relative; height: 100vh; background: url('Wrapp.png') center/cover no-repeat;">
   <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.4);"></div>
   <div style="position: relative; z-index: 2; color: white; text-align: center; top: 50%; transform: translateY(-50%); padding: 0 20px;">
     <h1 style="font-size: 3.5em; color: #ffd700; text-transform: uppercase; margin-bottom: 15px;">Spincy</h1>
