--- a/index.html
+++ b/index.html
@@ -79,19 +79,20 @@
 </head>
 <body>
 
-  <nav>
-    <a href="/" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
-      <img src="spincy logo.png" alt="Spincy Logo" style="height:200px;">
-      <span style="font-weight:bold; font-size:1.6em; color:#e12c2c;">Spincy</span>
-    </a>
-    <div>
-      <a href="/#home">Home</a>
-      <a href="/#about">About</a>
-      <a href="menu.html">Menu</a>
-      <a href="catering.html">Catering</a>
-      <a href="/#contact">Contact</a>
-    </div>
-  </nav>
+<nav style="background:white; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #eee;">
+  <a href="/" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
+    <img src="spincy logo.png" alt="Spincy Logo" style="height:200px;">
+    
+  </a>
+  <div style="display:flex; gap: 25px; font-size: 2.1em; font-weight: bold;">
+    <a href="/#home" style="color:#e12c2c; text-decoration:none;">Home</a>
+    <a href="/#about" style="color:#e12c2c; text-decoration:none;">About</a>
+    <a href="menu.html" style="color:#e12c2c; text-decoration:none;">Menu</a>
+    <a href="catering.html" style="color:#e12c2c; text-decoration:none;">Catering</a>
+    <a href="/#contact" style="color:#e12c2c; text-decoration:none;">Contact</a>
+  </div>
+</nav>
+
 <header id="home" style="position: relative; height: 100vh; background: url('Wrapp.png') center/cover no-repeat;">
   <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.4);"></div>
   <div style="position: relative; z-index: 2; color: white; text-align: center; top: 50%; transform: translateY(-50%); padding: 0 20px;">
