--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 </head>
 <body>
 
-<nav style="background:white; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #eee;">
+<nav style="background:white; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #eee; position: static;">
   <a href="/" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
-    <img src="spincy logo.png" alt="Spincy Logo" style="height:200px;">
+    <img src="spincy logo.png" alt="Spincy Logo" style="height:60px;">
     
   </a>
-  <div style="display:flex; gap: 25px; font-size: 2.1em; font-weight: bold;">
+  <div style="display:flex; gap: 15px; font-size: 1.6em; font-weight: bold;">
     <a href="/#home" style="color:#e12c2c; text-decoration:none;">Home</a>
     <a href="/#about" style="color:#e12c2c; text-decoration:none;">About</a>
     <a href="menu.html" style="color:#e12c2c; text-decoration:none;">Menu</a>
@@ -92,6 +92,7 @@
     <a href="/#contact" style="color:#e12c2c; text-decoration:none;">Contact</a>
   </div>
 </nav>
+
 
 <header id="home" style="position: relative; height: 100vh; background: url('Wrapp.png') center/cover no-repeat;">
   <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.4);"></div>
