--- a/index.html
+++ b/index.html
@@ -94,75 +94,43 @@
 </nav>
 
 
-<header id="home" style="position: relative; height: 100vh; background: url('Wrapp.png') center/cover no-repeat;">
-  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.4);"></div>
-  <div style="position: relative; z-index: 2; color: white; text-align: center; top: 50%; transform: translateY(-50%); padding: 0 20px;">
-    <h1 style="font-size: 3.5em; color: #ffd700; text-transform: uppercase; margin-bottom: 15px;">Spincy</h1>
-    <p style="font-size: 1.5em;">Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
+<!-- OUR STORY SECTION ON BACKGROUND -->
+<section id="about" style="position: relative; background: url('Wrapp.webp') center/cover no-repeat; color: white; padding: 80px 20px;">
+  <div style="position: absolute; inset: 0; background: rgba(0,0,0,0.6);"></div>
+  <div style="position: relative; max-width: 900px; margin: 0 auto; text-align: center; z-index: 1;">
+    <h2 style="font-size: 2.8em; color: #ffd700; margin-bottom: 20px;">Our Story</h2>
+    <p style="font-size: 1.2em; line-height: 1.6;">
+      At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
+      Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul, where flavor brings people together across cultures and generations.
+      <br><br>
+      That same spirit lives here in Quincy, where we serve bold, fire-roasted chicken wraps crafted with care, warmth, and just the right spice.
+      Whether you’re grabbing a quick bite or sitting down with friends, we’re here to turn everyday meals into flavorful moments.
+    </p>
   </div>
-</header>
+</section>
 
-
-
-  <section id="about" class="hero" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 30px; max-width: 1200px; margin: 0 auto; padding: 40px 20px;">
-    <img src="hoagie.jpg" alt="Doner wrap" style="flex: 1; max-width: 500px; border-radius: 12px;">
+<!-- MISSION SECTION SIDE-BY-SIDE WITH IMAGE -->
+<section class="mission" style="background-color: #fff8f0; padding: 60px 20px;">
+  <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; max-width: 1200px; margin: 0 auto; gap: 40px;">
     <div style="flex: 1; min-width: 300px;">
-      <h1>Our Story</h1>
-      <p>
-        At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
-        Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul, where flavor brings people together across cultures and generations.
-        That same spirit lives here in Quincy, where we serve bold, fire-roasted chicken wraps crafted with care, warmth, and just the right spice.
+      <h2 style="font-size: 2.5em; color: #e12c2c; margin-bottom: 20px;">Our Mission</h2>
+      <p style="font-size: 1.1em; line-height: 1.6;">
+        At Spincy, our mission goes beyond serving great food — we want to nourish our community in every sense.
+        Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program:
+        a simple way for customers to donate a meal for someone in need.
         <br><br>
-        Whether you’re grabbing a quick bite or sitting down with friends, we’re here to turn everyday meals into flavorful moments.
-        Because at Spincy, it’s not just about what’s on the plate — it’s about the feeling it brings.
+        Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
+        Because at Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
       </p>
+      <a href="#contact" style="display:inline-block; background:#e12c2c; color:white; padding:12px 25px; text-decoration:none; border-radius:6px; font-weight:bold; margin-top:20px;">
+  🍽️ Donate a Meal
+</a>
+
     </div>
-  </section>
-
-  <section id="catering" style="background: #fff0ea; padding: 60px 20px; text-align: center;">
-    <h2 style="font-size: 2.2em; margin-bottom: 20px;">We Cater Events!</h2>
-    <p style="font-size: 1.1em; max-width: 700px; margin: 0 auto 25px;">
-      Hosting a party, office lunch, or family gathering? Spincy offers fresh and flavorful catering options with our famous wraps and sides.
-      We customize each order to fit your event size and style — with pickup or delivery available!
-    </p>
-    <a href="/#contact" style="background: #e12c2c; color: white; padding: 14px 30px; border-radius: 8px; text-decoration: none; font-size: 1.1em;">📩 Contact Us for Catering</a>
-  </section>
-
-  <section class="mission">
-    <h1>Our Mission</h1>
-    <p>
-      At Spincy, our mission goes beyond serving great food — we want to nourish our community in every sense.
-      Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program:
-      a simple way for customers to donate a meal for someone in need.
-      <br><br>
-      Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
-      <br><br>
-      Because at Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
-    </p>
-    <a href="#">Donate a Meal</a>
-  </section>
-
-  <a href="menu.html" style="position: fixed; bottom: 20px; right: 20px; background: #e12c2c; color: white; padding: 14px 24px; border-radius: 50px; font-size: 1em; font-weight: bold; text-decoration: none; box-shadow: 0 4px 8px rgba(0,0,0,0.3); z-index: 999;">
-    📋 See Our Menu & Order
-  </a>
-
-  <section id="contact" style="background: #fffaf6; padding: 60px 20px;">
-    <h2 style="text-align: center; font-size: 2em; margin-bottom: 40px;">Get In Touch</h2>
-    <div style="display: flex; flex-wrap: wrap; gap: 40px; justify-content: center; max-width: 1000px; margin: 0 auto;">
-      <div style="flex: 1; min-width: 280px; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="color:#e12c2c;">📍 Visit Us</h3>
-        <p>104 N 6th Street, Quincy, IL</p>
-        <h3 style="color:#e12c2c;">📞 Call or Text</h3>
-        <p><a href="tel:+12173160755" style="color: #333; text-decoration: none;">(217) 316-0755</a></p>
-        <h3 style="color:#e12c2c;">📧 Email</h3>
-        <p><a href="mailto:spincyquincy@gmail.com" style="color: #333; text-decoration: none;">spincyquincy@gmail.com</a></p>
-      </div>
+    <div style="flex: 1; min-width: 300px;">
+      <img src="hoagie.jpg" alt="Spincy Hoagie" style="width: 100%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer>
-    © 2025 Spincy Quincy. All rights reserved.
-  </footer>
 
-</body>
-</html>
