--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
 
-<nav style="background:white; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #eee; position: static;">
+<nav style="background:white; padding: 10px 10px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #eee; position: static;">
   <a href="/" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
     <img src="spincy logo.png" alt="Spincy Logo" style="height:200px;">
     
@@ -95,7 +95,7 @@
 
 
 <!-- OUR STORY SECTION ON BACKGROUND -->
-<section id="about" style="position: relative; background: url('Wrapp.webp') center/cover no-repeat; color: white; padding: 80px 20px;">
+<section id="about" style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 80px 20px;">
   <div style="position: absolute; inset: 0; background: rgba(0,0,0,0.6);"></div>
   <div style="position: relative; max-width: 900px; margin: 0 auto; text-align: center; z-index: 1;">
     <h2 style="font-size: 2.8em; color: #ffd700; margin-bottom: 20px;">Our Story</h2>
