--- a/index.html
+++ b/index.html
@@ -79,19 +79,23 @@
 </head>
 <body>
 
-<nav style="background:white; padding: 10px 10px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #eee; position: static;">
-  <a href="/" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
-    <img src="spincy logo.png" alt="Spincy Logo" style="height:200px;">
+
+<nav style="position: absolute; top: 0; left: 0; width: 100%; z-index: 10; display: flex; justify-content: space-between; align-items: center; padding: 20px 40px;">
+  <!-- Logo + Name -->
+  <a href="/" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
+    <img src="spincy-logo.png" alt="Spincy Logo" style="height: 200px;">
     
   </a>
-  <div style="display:flex; gap: 15px; font-size: 1.6em; font-weight: bold;">
-    <a href="/#home" style="color:#e12c2c; text-decoration:none;">Home</a>
-    <a href="/#about" style="color:#e12c2c; text-decoration:none;">About</a>
-    <a href="menu.html" style="color:#e12c2c; text-decoration:none;">Menu</a>
-    <a href="catering.html" style="color:#e12c2c; text-decoration:none;">Catering</a>
-    <a href="/#contact" style="color:#e12c2c; text-decoration:none;">Contact</a>
+  
+  <div style="display: flex; gap: 15px; font-size: 1em; font-weight: bold;">
+    <a href="/#home" style="color: white; text-decoration: none;">Home</a>
+    <a href="/#about" style="color: white; text-decoration: none;">About</a>
+    <a href="menu.html" style="color: white; text-decoration: none;">Menu</a>
+    <a href="catering.html" style="color: white; text-decoration: none;">Catering</a>
+    <a href="/#contact" style="color: white; text-decoration: none;">Contact</a>
   </div>
 </nav>
+
 
 
 <!-- OUR STORY SECTION ON BACKGROUND -->
