--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
 <body>
 
 
+<!-- Transparent DonerG-style NAVIGATION -->
 <nav style="position: absolute; top: 0; left: 0; width: 100%; z-index: 10; display: flex; justify-content: space-between; align-items: center; padding: 20px 40px;">
   <!-- Logo + Name -->
   <a href="/" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
-    <img src="spincy-logo.png" alt="Spincy Logo" style="height: 200px;">
-    
-  </a>
+    <img src="spincy logo.png" alt="Spincy Logo" style="height: 200px;">
   
+  </a>
+  <!-- Navigation Links -->
   <div style="display: flex; gap: 15px; font-size: 1em; font-weight: bold;">
     <a href="/#home" style="color: white; text-decoration: none;">Home</a>
     <a href="/#about" style="color: white; text-decoration: none;">About</a>
@@ -98,8 +99,10 @@
 
 
 
+
 <!-- OUR STORY SECTION ON BACKGROUND -->
-<section id="about" style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 80px 20px;">
+style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 140px 20px 80px;"
+
   <div style="position: absolute; inset: 0; background: rgba(0,0,0,0.6);"></div>
   <div style="position: relative; max-width: 900px; margin: 0 auto; text-align: center; z-index: 1;">
     <h2 style="font-size: 2.8em; color: #ffd700; margin-bottom: 20px;">Our Story</h2>
