--- a/index.html
+++ b/index.html
@@ -80,28 +80,31 @@
 <body>
 
 
-<!-- Transparent DonerG-style NAVIGATION -->
-<nav style="position: absolute; top: 0; left: 0; width: 100%; z-index: 10; display: flex; justify-content: space-between; align-items: center; padding: 20px 40px;">
-  <!-- Logo + Name -->
+
+<nav style="position: absolute; top: 0; left: 0; width: 100%; z-index: 10; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; background: transparent;">
+  
+  <!-- 🍗 Logo + Name -->
   <a href="/" style="display: flex; align-items: center; gap: 10px; text-decoration: none;">
-    <img src="spincy logo.png" alt="Spincy Logo" style="height: 200px;">
+    <img src="spincy logo.png" alt="Spincy Logo" style="height: 185px;">
   
   </a>
-  <!-- Navigation Links -->
-  <div style="display: flex; gap: 15px; font-size: 1em; font-weight: bold;">
-    <a href="/#home" style="color: white; text-decoration: none;">Home</a>
-    <a href="/#about" style="color: white; text-decoration: none;">About</a>
-    <a href="menu.html" style="color: white; text-decoration: none;">Menu</a>
-    <a href="catering.html" style="color: white; text-decoration: none;">Catering</a>
-    <a href="/#contact" style="color: white; text-decoration: none;">Contact</a>
+  
+  <!-- 🧭 Navigation Links -->
+  <div style="display: flex; gap: 20px; font-size: 1em; font-weight: bold;">
+    <a href="/#home" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Home</a>
+    <a href="/#about" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">About</a>
+    <a href="menu.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Menu</a>
+    <a href="catering.html" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Catering</a>
+    <a href="/#contact" style="color: white; text-decoration: none; text-shadow: 1px 1px 3px black;">Contact</a>
   </div>
 </nav>
 
 
 
 
+
 <!-- OUR STORY SECTION ON BACKGROUND -->
-style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 140px 20px 80px;"
+<section id="about" style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 160px 20px 80px;">
 
   <div style="position: absolute; inset: 0; background: rgba(0,0,0,0.6);"></div>
   <div style="position: relative; max-width: 900px; margin: 0 auto; text-align: center; z-index: 1;">
