--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Spincy Quincy</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #fff8f0;
-      color: #333;
-    }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #fff8f0;
+  color: #333;
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
     nav {
       background: white;
       position: sticky;
@@ -102,22 +105,16 @@
 
 
 
-
-<!-- OUR STORY SECTION ON BACKGROUND -->
-<section id="about" style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 160px 20px 80px;">
-
-  <div style="position: absolute; inset: 0; background: rgba(0,0,0,0.6);"></div>
-  <div style="position: relative; max-width: 900px; margin: 0 auto; text-align: center; z-index: 1;">
+<section id="about" style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 160px 20px 80px; margin: 0;">
+  <div style="background: rgba(0,0,0,0.5); padding: 60px 30px; border-radius: 12px; max-width: 1000px; margin: 0 auto;">
     <h2 style="font-size: 2.8em; color: #ffd700; margin-bottom: 20px;">Our Story</h2>
     <p style="font-size: 1.2em; line-height: 1.6;">
       At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
-      Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul, where flavor brings people together across cultures and generations.
-      <br><br>
-      That same spirit lives here in Quincy, where we serve bold, fire-roasted chicken wraps crafted with care, warmth, and just the right spice.
-      Whether you’re grabbing a quick bite or sitting down with friends, we’re here to turn everyday meals into flavorful moments.
+      Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul...
     </p>
   </div>
 </section>
+
 
 <!-- MISSION SECTION SIDE-BY-SIDE WITH IMAGE -->
 <section class="mission" style="background-color: #fff8f0; padding: 60px 20px;">
