--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
   background: #fff8f0;
   color: #333;
   overflow-x: hidden;
-  max-width: 100%;
+  
 }
 
     nav {
@@ -105,14 +105,16 @@ body {
 
 
 
-<section id="about" style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 160px 20px 80px; margin: 0;">
-  <div style="background: rgba(0,0,0,0.5); padding: 60px 30px; border-radius: 12px; max-width: 1000px; margin: 0 auto;">
-    <h2 style="font-size: 2.8em; color: #ffd700; margin-bottom: 20px;">Our Story</h2>
-    <p style="font-size: 1.2em; line-height: 1.6;">
+<section id="about" style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 160px 20px 80px; margin: 0; border: none;">
+  <div style="background: rgba(0,0,0,0.55); padding: 60px 30px; border-radius: 12px; max-width: 1000px; margin: 0 auto; box-shadow: none;">
+    <h2 style="font-size: 2.8em; color: #ffd700; margin-bottom: 20px; border: none;">Our Story</h2>
+    <p style="font-size: 1.2em; line-height: 1.6; margin: 0; border: none;">
       At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
       Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul...
     </p>
   </div>
+</section>
+
 </section>
 
 
