--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ body {
   background: #fff8f0;
   color: #333;
   overflow-x: hidden;
-  
 }
+
 
     nav {
       background: white;
@@ -105,12 +105,48 @@ body {
 
 
 
-<section id="about" style="position: relative; background: url('Wrapp.png') center/cover no-repeat; color: white; padding: 160px 20px 80px; margin: 0; border: none;">
-  <div style="background: rgba(0,0,0,0.55); padding: 60px 30px; border-radius: 12px; max-width: 1000px; margin: 0 auto; box-shadow: none;">
-    <h2 style="font-size: 2.8em; color: #ffd700; margin-bottom: 20px; border: none;">Our Story</h2>
-    <p style="font-size: 1.2em; line-height: 1.6; margin: 0; border: none;">
-      At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
-      Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul...
+<section id="about" style="
+  position: relative;
+  background-image: url('Wrapp.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: white;
+  padding: 160px 20px 80px;
+  margin: 0;
+  border: none;
+  overflow: hidden;
+">
+  <div style="
+    background: rgba(0,0,0,0.55);
+    padding: 60px 30px;
+    border-radius: 12px;
+    max-width: 1000px;
+    margin: 0 auto;
+    box-shadow: none;
+    backdrop-filter: blur(1px);
+  ">
+    <h2 style="
+      font-size: 2.8em;
+      color: #ffd700;
+      margin-bottom: 20px;
+      border: none;
+    ">Our Story</h2>
+    <p style="
+      font-size: 1.2em;
+      line-height: 1.6;
+      margin: 0;
+      border: none;
+    ">
+      At Spincy, we believe food is more than fuel — it’s comfort, culture, and connection.
+
+Our love for chicken döner was born in the vibrant streets of Istanbul, where the aroma of fire-roasted meat, the rhythm of busy sidewalks, and the joy of sharing meals with loved ones fills every corner.
+
+That tradition inspired us to bring the same flavor, passion, and hospitality to Quincy, Illinois — a place we now proudly call home.
+
+Every Spincy wrap is handcrafted with marinated chicken, warm lavash, fresh vegetables, and bold, savory sauce — all served with care and love.
+
+Whether you’re grabbing a quick bite or connecting with friends, we’re here to turn every meal into a flavorful moment that brings people together.
     </p>
   </div>
 </section>
